--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cloudinary": "^1.41.0",
     "next": "13.4.19",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
