--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^5.4.1",
     "cloudinary": "^1.41.0",
+    "framer-motion": "^10.16.16",
     "next": "13.4.19",
     "react": "^18",
     "react-dom": "^18",
